--- a/szablon/main.html
+++ b/szablon/main.html
@@ -190,7 +190,7 @@
                 <input placeholder="Szukaj autobusu...">
               </div>
               <div class="panelAutobusy__content__Filtr__item">
-                <input placeholder="Filtr Stanów autobusu">
+                <input placeholder="Filtr stanów autobusu">
               </div>
               <div class="panelAutobusy__content__Filtr__item">
                 <input placeholder="Typ autobusu">
@@ -326,7 +326,171 @@
                   <input placeholder="Numer Rejestracyjny">
                 </div>
                 <div class="panelDodajAutobus__content__Filtr__item">
-                  <input placeholder="Numer Autobusu">
+                  <input placeholder="Numer VIN">
+                </div>
+                <div class="panelDodajAutobus__content__Filtr__item">
+                  <input placeholder="Typ autobusu">
+                </div>
+                <div class="panelDodajAutobus__content__Filtr__item">
+                  <input placeholder="Biletomat">
+                </div>
+              </div>
+            </div>
+            <div class="panelDodajAutobus__navigation">
+              <button class="panelDodajAutobus__navigation__item">Dodaj Autobus</button><a href="#" class="panelDodajAutobus__navigation__item -abort">Anuluj</a>
+            </div><span class="panelDodajAutobus__close"><span class="panelDodajAutobus__icon fa fa-times"></span></span>
+          </div>
+        </div>
+      </div>
+      <div class="panelPrzystanki panel -hidden dragger">
+        <div class="panelPrzystanki__wrapper">
+          <div class="panelPrzystanki__title">Panel Zarządzania Przystankami</div>
+          <div class="panelPrzystanki__subtitle">Zarządzanie przystankami w systemie.</div>
+          <div class="panelPrzystanki__navigation"><a href="#" id="panel-DodajautobusyButton" class="panelPrzystanki__navigation__item">Dodaj Przystanek</a></div>
+          <div class="panelPrzystanki__content">
+            <div class="panelPrzystanki__content__Title">Lista Przystanków</div>
+            <div class="panelPrzystanki__content__Filtr">
+              <div class="panelPrzystanki__content__Filtr__item">
+                <input placeholder="Szukaj autobusu...">
+              </div>
+              <div class="panelPrzystanki__content__Filtr__item">
+                <input placeholder="Filtr stanów autobusu">
+              </div>
+              <div class="panelPrzystanki__content__Filtr__item">
+                <input placeholder="Typ autobusu">
+              </div>
+              <div class="panelPrzystanki__content__Filtr__item">
+                <input placeholder="Biletomat">
+              </div>
+            </div>
+            <div class="panelPrzystanki__contentList">
+              <div class="panelList">
+                <div class="panelList__header">
+                  <div class="panelList__headeritemType">Typ</div>
+                  <div class="panelList__headeritemName">Numer Autobusu</div>
+                  <div class="panelList__headeritemStatus">Status</div>
+                  <div class="panelList__headeritemBiletomat">Biletomat</div>
+                  <div class="panelList__headeritemnavigation">Szczegóły</div>
+                </div>
+                <div class="panelAutobusy__list panelList__content">
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">102</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">103</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">5</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">6</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">7</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">8</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">9</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">10</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">11</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><span class="panelPrzystanki__close"><span class="panelPrzystanki__icon fa fa-times"></span></span>
+        </div>
+      </div>
+      <div class="panelDodajAutobus__dragger">
+        <div class="panelDodajAutobus panel -hidden dragger">
+          <div class="panelDodajAutobus__wrapper">
+            <div class="panelDodajAutobus__title">Dodaj Autobus</div>
+            <div class="panelDodajAutobus__subtitle">Panel dodawania nowych autobusów.</div>
+            <div class="panelDodajAutobus__content">
+              <div class="panelDodajAutobus__content__Title">Dane Autobusu</div>
+              <div class="panelDodajAutobus__content__Filtr">
+                <div class="panelDodajAutobus__content__Filtr__item">
+                  <input placeholder="Numer Rejestracyjny">
+                </div>
+                <div class="panelDodajAutobus__content__Filtr__item">
+                  <input placeholder="Numer VIN">
                 </div>
                 <div class="panelDodajAutobus__content__Filtr__item">
                   <input placeholder="Typ autobusu">
