--- a/szablon/main.html
+++ b/szablon/main.html
@@ -509,6 +509,170 @@
           </div>
         </div>
       </div>
+      <div class="panelUsers panel -hidden dragger">
+        <div class="panelUsers__wrapper">
+          <div class="panelUsers__title">Panel Zarządzania Użytkownikami</div>
+          <div class="panelUsers__subtitle">Zarządzanie użytkownikami systemu.</div>
+          <div class="panelUsers__navigation"><a href="#" id="panel-DodajUsersButton" class="panelUsers__navigation__item">Dodaj Użytkownika</a></div>
+          <div class="panelUsers__content">
+            <div class="panelUsers__content__Title">Lista Autobusów</div>
+            <div class="panelUsers__content__Filtr">
+              <div class="panelUsers__content__Filtr__item">
+                <input placeholder="Szukaj autobusu...">
+              </div>
+              <div class="panelUsers__content__Filtr__item">
+                <input placeholder="Filtr stanów autobusu">
+              </div>
+              <div class="panelUsers__content__Filtr__item">
+                <input placeholder="Typ autobusu">
+              </div>
+              <div class="panelUsers__content__Filtr__item">
+                <input placeholder="Biletomat">
+              </div>
+            </div>
+            <div class="panelUsers__contentList">
+              <div class="panelList">
+                <div class="panelList__header">
+                  <div class="panelList__headeritemType">Typ</div>
+                  <div class="panelList__headeritemName">Numer Autobusu</div>
+                  <div class="panelList__headeritemStatus">Status</div>
+                  <div class="panelList__headeritemBiletomat">Biletomat</div>
+                  <div class="panelList__headeritemnavigation">Szczegóły</div>
+                </div>
+                <div class="panelUsers__list panelList__content">
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">102</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">103</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">5</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">6</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">7</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">8</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">9</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">10</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                  <div class="panelList__item">
+                    <div class="panelList__itemType">
+                      <div class="fa fa-bus"></div>
+                    </div>
+                    <div class="panelList__itemName">11</div>
+                    <div class="panelList__itemStatus">Aktywny</div>
+                    <div class="panelList__itemBiletomat">
+                      <div class="fa fa-times-circle-o"></div>
+                    </div>
+                    <div class="panelList__navigation">Zobacz</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div><span class="panelUsers__close"><span class="panelUsers__icon fa fa-times"></span></span>
+        </div>
+      </div>
+      <div class="panelDodajUsers__dragger">
+        <div class="panelDodajUsers panel -hidden dragger">
+          <div class="panelDodajUsers__wrapper">
+            <div class="panelDodajUsers__title">Dodaj Użytkownika</div>
+            <div class="panelDodajUsers__subtitle">Panel dodawania nowych autobusów.</div>
+            <div class="panelDodajUsers__content">
+              <div class="panelDodajUsers__content__Title">Dane Autobusu</div>
+              <div class="panelDodajUsers__content__Filtr">
+                <div class="panelDodajUsers__content__Filtr__item">
+                  <input placeholder="Numer Rejestracyjny">
+                </div>
+                <div class="panelDodajUsers__content__Filtr__item">
+                  <input placeholder="Numer VIN">
+                </div>
+                <div class="panelDodajUsers__content__Filtr__item">
+                  <input placeholder="Typ autobusu">
+                </div>
+                <div class="panelDodajUsers__content__Filtr__item">
+                  <input placeholder="Biletomat">
+                </div>
+              </div>
+            </div>
+            <div class="panelDodajUsers__navigation">
+              <button class="panelDodajUsers__navigation__item">Dodaj Użytkownika</button><a href="#" class="panelDodajUsers__navigation__item -abort">Anuluj</a>
+            </div><span class="panelDodajUsers__close"><span class="panelDodajUsers__icon fa fa-times"></span></span>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
