--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
     <script src="scripts/vendor.min.js"></script>
     <!--script(src='bower_components/javascript-detect-element-resize/detect-element-resize.js')-->
     <script src="http://maps.google.com/maps/api/js"></script>
-    <script src="https://jquery-xml2json-plugin.googlecode.com/svn/trunk/jquery.xml2json.js"></script>
+    <!--script(src='https://jquery-xml2json-plugin.googlecode.com/svn/trunk/jquery.xml2json.js')-->
     <!--script(src="bower_components/angular/angular.min.js")-->
     <script src="bower_components/angular-cookies/angular-cookies.min.js"></script>
     <script src="bower_components/angular-route/angular-route.min.js"></script>
@@ -47,99 +47,101 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body ng-controller="MapController">
-    <div class="headerholder">
-      <!--Created by salimike on 18.03.16.
-      -->
-      <div ng-hide="globals.HeaderToHide" class="header">
-        <div ng-click="initMapTimeout()" class="header__corner"><i class="fa fa-bus"></i></div>
-        <div class="header__switcher -hidden">
-          <div class="background"></div>
-          <ul class="header__panel">
-            <li class="header__item"><a href="#/bus"><span class="header__button"><span class="header__buttonIconBG">
-                    <div class="header__buttonIcon fa fa-bus"></div></span>Autobusy</span></a></li>
-            <li class="header__item"><a href="#/busstop"><span class="header__button"><span class="header__buttonIconBG">
-                    <div class="header__buttonIcon fa fa-map-signs"></div></span>Przystanki</span></a></li>
-            <li class="header__item"><a href="#/track"><span class="header__button"><span class="header__buttonIconBG">
-                    <div class="header__buttonIcon fa fa-road"></div></span>Trasy</span></a></li>
-            <li class="header__item"><a href="#/user"><span class="header__button"><span class="header__buttonIconBG">
-                    <div class="header__buttonIcon fa fa-users"></div></span>Użytkownicy</span></a></li>
-            <li class="header__item"><a href="#/controls"><span class="header__button"><span class="header__buttonIconBG">
-                    <div class="header__buttonIcon fa fa-eye"></div></span>Kontrole</span></a></li>
-          </ul>
-        </div>
-      </div>
-      <div class="headerLogo"><span>MPK OLSZTYN</span></div>
-      <div class="headerProfile">
-        <div class="headerProfile__corner"><i class="fa fa-th-large"></i></div>
-        <div class="headerProfile__switcher -hidden">
-          <div class="background"></div>
-          <ul class="headerProfile__panel">
-            <li ng-hide="globals.UserIsLogin" class="headerProfile__item"><a href="/#/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                    <div class="headerProfile__buttonIcon fa fa-power-off"></div></span>Logowanie</span></a></li>
-            <li ng-hide="globals.UserIsLogin" class="headerProfile__item"><a href="/#/register"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                    <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></a></li>
-            <li ng-hide="globals.UserIsLogin" class="headerProfile__item"><a href="/#/forgot"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                    <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></a></li>
-            <li ng-hide="globals.HeaderToHide" class="headerProfile__item"><a href="/#/myaccount"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                    <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></a></li>
-            <li class="headerProfile__item"><a href="/#/info"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                    <div class="headerProfile__buttonIcon fa fa-info-circle"></div></span>Informacje</span></a></li>
-            <li ng-hide="globals.HeaderToHide" class="headerProfile__item"><a href="/#/logout"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
-                    <div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></a></li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div ng-init="initMarkers()" class="panels">
-      <div ng-view></div>
-      <div ng-click="initMapTimeout()" class="panels__close"><a href="/"><i class="fa fa-angle-double-left"></i></a></div>
-      <footer>
-        <p>Zespół Coffee <br> Like?<img src="img/coffee-cup.png" alt="Team"></p>
-      </footer>
-    </div>
-    <div class="wrapper">
-      <div ng-hide="globals.UserIsLogin" class="panelWelcome__holder">
-        <div class="panelWelcome panel">
-          <div class="panelWelcome__wrapper"><span class="panelWelcome__buttonIconBG">
-              <div class="panelWelcome__buttonIcon fa fa-bus"></div></span>
-            <div class="panelWelcome__title">Witaj w systemie MPK</div>
-            <div class="panelWelcome__text">Projekt zespołowy.</div>
+    <div class="sectionMain">
+      <div class="headerholder">
+        <!--Created by salimike on 18.03.16.
+        -->
+        <div ng-hide="globals.HeaderToHide" class="header">
+          <div ng-click="initMapTimeout()" class="header__corner"><i class="fa fa-bus"></i></div>
+          <div class="header__switcher -hidden">
+            <div class="background"></div>
+            <ul class="header__panel">
+              <li class="header__item"><a href="#/bus"><span class="header__button"><span class="header__buttonIconBG">
+                      <div class="header__buttonIcon fa fa-bus"></div></span>Autobusy</span></a></li>
+              <li class="header__item"><a href="#/busstop"><span class="header__button"><span class="header__buttonIconBG">
+                      <div class="header__buttonIcon fa fa-map-signs"></div></span>Przystanki</span></a></li>
+              <li class="header__item"><a href="#/track"><span class="header__button"><span class="header__buttonIconBG">
+                      <div class="header__buttonIcon fa fa-road"></div></span>Trasy</span></a></li>
+              <li class="header__item"><a href="#/user"><span class="header__button"><span class="header__buttonIconBG">
+                      <div class="header__buttonIcon fa fa-users"></div></span>Użytkownicy</span></a></li>
+              <li class="header__item"><a href="#/controls"><span class="header__button"><span class="header__buttonIconBG">
+                      <div class="header__buttonIcon fa fa-eye"></div></span>Kontrole</span></a></li>
+            </ul>
           </div>
-          <div class="panelWelcome__navigation">
-            <!--<a href="#" style="display:block;">Link #01</a>--><a href="#/login" class="WelcomeClick blue">Logowanie</a><a href="#/register" class="WelcomeClick green">Rejestracja</a>
+        </div>
+        <div class="headerLogo"><span>MPK OLSZTYN</span></div>
+        <div class="headerProfile">
+          <div class="headerProfile__corner"><i class="fa fa-th-large"></i></div>
+          <div class="headerProfile__switcher -hidden">
+            <div class="background"></div>
+            <ul class="headerProfile__panel">
+              <li ng-hide="globals.UserIsLogin" class="headerProfile__item"><a href="/#/login"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                      <div class="headerProfile__buttonIcon fa fa-power-off"></div></span>Logowanie</span></a></li>
+              <li ng-hide="globals.UserIsLogin" class="headerProfile__item"><a href="/#/register"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                      <div class="headerProfile__buttonIcon fa fa-sign-in"></div></span>Rejestracja</span></a></li>
+              <li ng-hide="globals.UserIsLogin" class="headerProfile__item"><a href="/#/forgot"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                      <div class="headerProfile__buttonIcon fa fa-key"></div></span>Odzyskaj konto</span></a></li>
+              <li ng-hide="globals.HeaderToHide" class="headerProfile__item"><a href="/#/myaccount"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                      <div class="headerProfile__buttonIcon fa fa-user"></div></span>Moje Konto</span></a></li>
+              <li class="headerProfile__item"><a href="/#/info"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                      <div class="headerProfile__buttonIcon fa fa-info-circle"></div></span>Informacje</span></a></li>
+              <li ng-hide="globals.HeaderToHide" class="headerProfile__item"><a href="/#/logout"><span class="headerProfile__button"><span class="headerProfile__buttonIconBG">
+                      <div class="headerProfile__buttonIcon fa fa-sign-out"></div></span>Wyloguj</span></a></li>
+            </ul>
           </div>
         </div>
       </div>
-      <div class="googleMaps">
-        <div id="googleMaps" class="googleMaps__API">
-          <ng-map center="[{{lat}}, {{lng}}]" zoom="14" refresh="true" styles="[{featureType:'landscape',stylers:[{saturation: -100},{lightness: 65},{visibility: 'on'}]},{featureType: 'poi',stylers: [{saturation: -100},{lightness: 51},{visibility: 'simplified'}]},{featureType: 'road.highway',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'road.arterial',stylers: [{saturation: -100},{lightness: 30},{visibility: 'on'}]},{featureType: 'road.local',stylers: [{saturation: -100},{lightness: 40},{visibility: 'on'}]},{featureType: 'transit',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'administrative.province',stylers: [{visibility: 'off'}]},{featureType: 'water',elementType: 'labels',stylers: [{visibility: 'on'},{lightness: -25},{saturation: -100}]},{featureType: 'water',elementType: 'geometry',stylers: [{hue: '#ffff00'},{lightness: -25},{saturation: -97}]}]" pan-control="false" map-type-control="true" map-type-control-options="{style:'HORIZONTAL_BAR', position:'RIGHT_BOTTOM'}" zoom-control="true" zoom-control-options="{style:'LARGE', position:'RIGHT_CENTER'}" street-view-control="false" scale-control="false" tilt="45" id="foo">
-            <info-window id="myInfoWindow">
-              <div ng-non-bindable class="googleMaps__API__infoWindow">
-                <h4>{{selectedBusstop.Name}}</h4>
-                <table>
-                  <tr>
-                    <td>Ulica</td>
-                    <td>{{selectedBusstop.LocalizationString}}</td>
-                  </tr>
-                  <tr>
-                    <td>Typ</td>
-                    <td>{{selectedBusstop.BusStopTypeName}}</td>
-                  </tr>
-                  <tr>
-                    <td>Biletomat</td>
-                    <td>{{selectedBusstop.GotMachineName}}</td>
-                  </tr>
-                  <tr>
-                    <td>Kiosk</td>
-                    <td>{{selectedBusstop.GotKioskName}}</td>
-                  </tr>
-                </table>
-              </div>
-            </info-window>
-            <!--Markery przystanków-->
-            <marker ng-repeat="b in busstopMarker" position="{{b.Position}}" id="{{b.Id}}" on-click="showBusstop(event, b)" icon="{{markerIcon}}"></marker>
-            <directions ng-show="czyWyswietloneD1" draggable="false" travel-mode="DRIVING" waypoints="{{wayPoints}}" origin="{{origin}}" destination="{{destination}}" suppress-markers="true"></directions>
-          </ng-map>
+      <div ng-init="initMarkers()" class="panels">
+        <div ng-view></div>
+        <div ng-click="initMapTimeout()" class="panels__close"><a href="/"><i class="fa fa-angle-double-left"></i></a></div>
+        <footer>
+          <p>Zespół Coffee <br> Like?<img src="img/coffee-cup.png" alt="Team"></p>
+        </footer>
+      </div>
+      <div class="wrapper">
+        <div ng-hide="globals.UserIsLogin" class="panelWelcome__holder">
+          <div class="panelWelcome panel">
+            <div class="panelWelcome__wrapper"><span class="panelWelcome__buttonIconBG">
+                <div class="panelWelcome__buttonIcon fa fa-bus"></div></span>
+              <div class="panelWelcome__title">Witaj w systemie MPK</div>
+              <div class="panelWelcome__text">Projekt zespołowy.</div>
+            </div>
+            <div class="panelWelcome__navigation">
+              <!--<a href="#" style="display:block;">Link #01</a>--><a href="#/login" class="WelcomeClick blue">Logowanie</a><a href="#/register" class="WelcomeClick green">Rejestracja</a>
+            </div>
+          </div>
+        </div>
+        <div class="googleMaps">
+          <div id="googleMaps" class="googleMaps__API">
+            <ng-map center="[{{lat}}, {{lng}}]" zoom="14" refresh="true" styles="[{featureType:'landscape',stylers:[{saturation: -100},{lightness: 65},{visibility: 'on'}]},{featureType: 'poi',stylers: [{saturation: -100},{lightness: 51},{visibility: 'simplified'}]},{featureType: 'road.highway',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'road.arterial',stylers: [{saturation: -100},{lightness: 30},{visibility: 'on'}]},{featureType: 'road.local',stylers: [{saturation: -100},{lightness: 40},{visibility: 'on'}]},{featureType: 'transit',stylers: [{saturation: -100},{visibility: 'simplified'}]},{featureType: 'administrative.province',stylers: [{visibility: 'off'}]},{featureType: 'water',elementType: 'labels',stylers: [{visibility: 'on'},{lightness: -25},{saturation: -100}]},{featureType: 'water',elementType: 'geometry',stylers: [{hue: '#ffff00'},{lightness: -25},{saturation: -97}]}]" pan-control="false" map-type-control="true" map-type-control-options="{style:'HORIZONTAL_BAR', position:'RIGHT_BOTTOM'}" zoom-control="true" zoom-control-options="{style:'LARGE', position:'RIGHT_CENTER'}" street-view-control="false" scale-control="false" tilt="45" id="foo">
+              <info-window id="myInfoWindow">
+                <div ng-non-bindable class="googleMaps__API__infoWindow">
+                  <h4>{{selectedBusstop.Name}}</h4>
+                  <table>
+                    <tr>
+                      <td>Ulica</td>
+                      <td>{{selectedBusstop.LocalizationString}}</td>
+                    </tr>
+                    <tr>
+                      <td>Typ</td>
+                      <td>{{selectedBusstop.BusStopTypeName}}</td>
+                    </tr>
+                    <tr>
+                      <td>Biletomat</td>
+                      <td>{{selectedBusstop.GotMachineName}}</td>
+                    </tr>
+                    <tr>
+                      <td>Kiosk</td>
+                      <td>{{selectedBusstop.GotKioskName}}</td>
+                    </tr>
+                  </table>
+                </div>
+              </info-window>
+              <!--Markery przystanków-->
+              <marker ng-repeat="b in busstopMarker" position="{{b.Position}}" id="{{b.Id}}" on-click="showBusstop(event, b)" icon="{{markerIcon}}"></marker>
+              <directions ng-show="czyWyswietloneD1" draggable="false" travel-mode="DRIVING" waypoints="{{wayPoints}}" origin="{{origin}}" destination="{{destination}}" suppress-markers="true"></directions>
+            </ng-map>
+          </div>
         </div>
       </div>
     </div>
