--- a/app/test/activitySenderTest.html
+++ b/app/test/activitySenderTest.html
@@ -2,6 +2,25 @@
         + (location.host || 'localhost').split(':')[0]
         + ':35729/livereload.js"></'
         + 'script>')
--->
+--><!-- bower:js -->
+<script src="bower_components/jquery/dist/jquery.js"></script>
+<script src="bower_components/ev-emitter/ev-emitter.js"></script>
+<script src="bower_components/imagesloaded/imagesloaded.js"></script>
+<script src="bower_components/jquery.easing/js/jquery.easing.js"></script>
+<script src="bower_components/slick.js/slick/slick.min.js"></script>
+<script src="bower_components/superfish/dist/js/superfish.js"></script>
+<script src="bower_components/superfish/dist/js/hoverIntent.js"></script>
+<script src="bower_components/jquery-sticky/jquery.sticky.js"></script>
+<script src="bower_components/select2/dist/js/select2.js"></script>
+<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+<script src="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.js"></script>
+
+<!-- endbower -->
+
+
+
+
+
+<div id="mapid" style="height:500px;"></div>
 
 <script src="fakeDevice.js"></script>
